@@ -26,6 +26,8 @@ AC_ARG_ENABLE(util,
 	[  --enable-util           Compile with util ])
 AC_ARG_ENABLE(example,
 	[  --enable-example        Compile with examples ])
+AC_ARG_ENABLE(mtab,
+	[  --disable-mtab          Disable and ignore usage of /etc/mtab ])
 
 subdirs2="include"
 
@@ -42,7 +44,10 @@ fi
 if test "$enable_example" != "no"; then
 	subdirs2="$subdirs2 example";
 fi
-AC_CHECK_FUNCS([setxattr])
+if test "$enable_mtab" = "no"; then
+	AC_DEFINE(IGNORE_MTAB, 1, [Don't update /etc/mtab])
+fi
+AC_CHECK_FUNCS([fork setxattr])
 AC_CHECK_MEMBERS([struct stat.st_atim])
 
 if test -z "$MOUNT_FUSE_PATH"; then
